--- a/Mutt.wiki
+++ b/Mutt.wiki
@@ -60,8 +60,21 @@ _Move mail in a folder_
 
 _Attach files_
 press "a" and for multiple file at once use "t" to tag the files you want
-press "enter" to add files
+press "enter" on one of tagged file to add files
 press "D" to delete attached file
+
+*Faire de règles de classements* 
+
+Voir https://www.linuxjournal.com/content/cleaning-your-inbox-mutt
+Ex: 
+{{{
+macro index .c "TCron Daemon<enter><tag-prefix-cond>
+↪<save-message>=cron<enter><end-cond>T~Cdmarc-reports<enter>
+↪<tag-prefix-cond><save-message>=dmarc<enter><end-cond>
+}}}
+
+`<tag-prefix-condition>` => permet d'exécuter la commande seulement si la commande de tag précédente à obtenu des résultats
+  
 
 == Tips ==
 
